Copyright notice added

--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+CopyRight Notice
+-->
 <head>
 	<title>New Project</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
