--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 CopyRight Notice
 -->
 <head>
-	<title>New Project</title>
+	<title>Interesting Project</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@ CopyRight Notice
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Some interesting stuff
 		</p>
 	</main>
 	<footer class="container">
