master branch before rebasing conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 CopyRight Notice
+Adding changes before rebasing conflicts.
 -->
 <head>
 	<title>Interesting Project</title>
