--- a/simple.html
+++ b/simple.html
@@ -18,8 +18,8 @@ Adding changes before rebasing conflicts.
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Im justhere
-			hanging
+			Proper paragraph written
+			here
 		</p>
 	</main>
 	<footer class="container">
