--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ CopyRight Notice
 Adding changes before rebasing conflicts.
 -->
 <head>
-	<title>Interesting Project</title>
+	<title>Updating title for webpage</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
