changes after git stash command

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <!--
 CopyRight Notice
 Adding changes before rebasing conflicts.
 -->
 <head>
-	<title>Updating title for webpage</title>
+	<title>Updating title for stash branch webpage</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
