updating tag version 19.2.1

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ CopyRight Notice
 Adding changes before rebasing conflicts.
 -->
 <head>
-	<title>Updating title for stash branch webpage</title>
+	<title>Updating title for Tag 19.2.1 </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
